--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI
+name: CI Workflow
 
 on:
   pull_request:
@@ -6,8 +6,9 @@ on:
       - main
 
 jobs:
-  lint:
+  Lint:
     runs-on: ubuntu-latest
+
     steps:
       - name: Check out code
         uses: actions/checkout@v3
@@ -15,19 +16,20 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: '18'  # Ajusta la versión de Node.js según tu proyecto
+
+      - name: Install pnpm
+        run: npm install -g pnpm
 
       - name: Install dependencies
-        run: |
-          pnpm install
+        run: pnpm install
 
       - name: Run linter
-        run: |
-          pnpm run lint
+        run: pnpm run lint
 
-  test:
+  Tests:
     runs-on: ubuntu-latest
-    needs: lint
+
     steps:
       - name: Check out code
         uses: actions/checkout@v3
@@ -35,12 +37,34 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: '18'  # Ajusta la versión de Node.js según tu proyecto
+
+      - name: Install pnpm
+        run: npm install -g pnpm
 
       - name: Install dependencies
-        run: |
-          pnpm install
+        run: pnpm install
 
       - name: Run tests
-        run: |
-          pnpm run test
+        run: pnpm run test
+
+  Test-coverage:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Check out code
+      uses: actions/checkout@v3
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18'  # Ajusta la versión de Node.js según tu proyecto
+
+    - name: Install pnpm
+      run: npm install -g pnpm
+
+    - name: Install dependencies
+      run: pnpm install
+
+    - name: Run test coverage
+      run: pnpm run test --coverage
