--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,23 +48,23 @@ jobs:
       - name: Run tests
         run: pnpm run test
 
-  Test-coverage:
-    runs-on: ubuntu-latest
+  # Test-coverage:
+  #   runs-on: ubuntu-latest
 
-    steps:
-    - name: Check out code
-      uses: actions/checkout@v3
+  #   steps:
+  #   - name: Check out code
+  #     uses: actions/checkout@v3
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18'  # Ajusta la versión de Node.js según tu proyecto
+  #   - name: Set up Node.js
+  #     uses: actions/setup-node@v3
+  #     with:
+  #       node-version: '18'  # Ajusta la versión de Node.js según tu proyecto
 
-    - name: Install pnpm
-      run: npm install -g pnpm
+  #   - name: Install pnpm
+  #     run: npm install -g pnpm
 
-    - name: Install dependencies
-      run: pnpm install
+  #   - name: Install dependencies
+  #     run: pnpm install
 
-    - name: Run test coverage
-      run: pnpm run test --coverage
+  #   - name: Run test coverage
+  #     run: pnpm run test --coverage
