--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.4.0",
     "lucide-react": "^0.462.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.1",
     "recharts": "^2.13.3",
+    "redux-mock-store": "^1.5.5",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
