--- a/package.json
+++ b/package.json
@@ -12,9 +12,16 @@
     "test:lint": "pnpm run lint && pnpm run test"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "@reduxjs/toolkit": "^2.4.0",
+    "lucide-react": "^0.462.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.1",
+    "recharts": "^2.13.3",
+    "redux-mock-store": "^1.5.5",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
@@ -25,8 +32,10 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
+    "@types/node": "^22.10.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-redux": "^7.1.34",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "babel-jest": "^29.7.0",
@@ -48,6 +57,7 @@
     "postcss": "^8.4.49",
     "prettier": "^3.4.1",
     "tailwindcss": "^3.4.15",
+    "typescript": "^5.7.2",
     "vite": "^6.0.1"
   }
 }
